# netrunner-desktop-containment

./: README.md  README.txt
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt
src/package/: metadata.desktop
src/package/contents/config/: config.qml
src/package/contents/ui/: ConfigFilter.qml  ConfigIcons.qml  ConfigLocation.qml  FolderItemDelegate.qml  FolderItemPreviewPluginsDialog.qml  FolderView.qml  FolderViewDialog.qml  FolderViewLayer.qml  main.qml
src/plugins/desktop/: CMakeLists.txt  netrunnerdesktopplugin.cpp  qmldir
src/plugins/folder/: CMakeLists.txt  foldermodel.cpp  netrunnerfolderplugin.cpp  qmldir
